--- a/netfweb/manifest.json
+++ b/netfweb/manifest.json
@@ -10,9 +10,9 @@
     "storage"
    ],
    
- "icons": { "16": "icon16.png" , "48": "icon.png", "128": "icon128.png" },
+ "icons": { "16": "icon16.png" , "48": "icon48.png", "128": "icon128.png" },
 
-  "page_action": { "default_icon": "icon.png" },
+  "page_action": { "default_icon": { "19": "icon19.png", "38": ""icon38.png"} },
  
   "content_scripts": [{
     "js": ["jquery.js", "content.js"],
