--- a/netfweb/manifest.json
+++ b/netfweb/manifest.json
@@ -1,18 +1,23 @@
 {
   "manifest_version": 2,
  
-  "name": "FilmWeb scores for Netflix",
-  "version": "0.1.0",
+  "name": "Film scores for Netflix",
+  "version": "0.1.1",
   "description": "Extension enriches netflix browser with a rating based on the scores from FilmWeb.pl site.",
   "permissions": [
     "http://*.filmweb.pl/",
     "http://filmweb.pl/",
-    "storage"
+    "storage",
+    "tabs"
    ],
    
  "icons": { "16": "icon16.png" , "48": "icon48.png", "128": "icon128.png" },
 
-  "page_action": { "default_icon": { "19": "icon19.png", "38": "icon38.png"} },
+  "browser_action": { 
+    "default_icon": { "16": "icon16.png" , "48": "icon48.png", "128": "icon128.png" },
+    "default_title": "Film scores for Netflix",
+    "default_popup": "popup.html"
+  },
  
   "content_scripts": [{
     "js": ["jquery.js", "content.js"],
