--- a/netfweb/manifest.json
+++ b/netfweb/manifest.json
@@ -3,8 +3,8 @@
  
   "name": "Film scores for Netflix",
   "short_name": "netfweb",
-  "version": "0.3.1",
-  "description": "Extension enriches netflix browser with a rating based on the scores from FilmWeb.pl, Netflix.pl and Metacritic.com sites.",
+  "version": "0.4.0",
+  "description": "Extension enriches netflix browser with a rating based on the scores from IMDb.com, FilmWeb.pl, Netflix.pl and Metacritic.com sites.",
   "permissions": [
     "https://github.com/mrwrob/netfweb",
     "https://www.nflix.pl/", 
@@ -13,7 +13,11 @@
     "http://www.filmweb.pl/",
     "http://lina.pl/",
     "http://www.metacritic.com/",
+    "https://unogs.com/",
+    "http://www.imdb.com/",
     "storage",
+    "webRequest",
+    "webRequestBlocking",
     "tabs"
    ],
  "web_accessible_resources": [ "star.png", "wrong.png", "ok.png" ],
@@ -28,13 +32,13 @@
  
   "content_scripts": [{
     "matches": ["https://www.netflix.com/*"],
-    "js": ["jquery.js", "map_filmweb.js", "map_metacritic.js", "content.js"],
+    "js": ["jquery.js", "content.js"],
     "css": ["content.css"]
   }], 
 
   "background": {
-    "scripts": ["jquery.js", "map_filmweb.js", "map_metacritic.js", "background.js"],
-    "persistent": false
+    "scripts": ["jquery.js", "map_imdb.js", "map_filmweb.js", "map_metacritic.js", "background.js"],
+    "persistent": true
   }
 
 }
