--- a/netfweb/manifest.json
+++ b/netfweb/manifest.json
@@ -3,8 +3,8 @@
 
   "name": "Film scores for Netflix",
   "short_name": "netfweb",
-  "version": "0.6.0",
-  "description": "Extension enriches netflix browser with a rating based on the scores from IMDb.com, FilmWeb.pl, Netflix.pl and Metacritic.com sites.",
+  "version": "0.6.1",
+  "description": "Enriches netflix site with a ratings based on the scores from IMDb.com, FilmWeb.pl, Metacritic.com and TheMovieDB.org sites.",
   "permissions": [
     "https://www.netflix.com/",
     "http://api.themoviedb.org/",
