--- a/netfweb/manifest.json
+++ b/netfweb/manifest.json
@@ -3,8 +3,8 @@
 
   "name": "Film scores for Netflix",
   "short_name": "netfweb",
-  "version": "0.6.10",
-  "description": "Enriches netflix site with a ratings based on the scores from IMDb.com, FilmWeb.pl, Metacritic.com and TheMovieDB.org sites.",
+  "version": "0.7.2",
+  "description": "Enriches netflix site with a ratings based on the scores from IMDb.com, FilmWeb.pl, Metacritic.com, Nflix.pl and TheMovieDB.org.",
   "permissions": [
     "https://www.netflix.com/",
     "http://api.themoviedb.org/",
