--- a/netfweb/manifest.json
+++ b/netfweb/manifest.json
@@ -3,8 +3,8 @@
 
   "name": "Film scores for Netflix",
   "short_name": "netfweb",
-  "version": "0.7.4",
-  "description": "Enriches netflix site with a ratings based on the scores from IMDb.com, FilmWeb.pl, Metacritic.com, Nflix.pl and TheMovieDB.org.",
+  "version": "0.9.0",
+  "description": "Enriches Netflix site with a ratings based on the scores from most popular review websites.",
   "permissions": [
     "https://www.netflix.com/",
     "http://api.themoviedb.org/",
@@ -12,7 +12,7 @@
     "https://www.filmweb.pl/",
     "https://www.metacritic.com/",
     "https://www.imdb.com/",
-    "http://lina.pl/",
+    "https://www.lina.pl/",
     "http://api.nflix.pl/",
     "storage",
     "tabs"
