--- a/netfweb/manifest.json
+++ b/netfweb/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Film scores for Netflix",
   "short_name": "netfweb",
-  "version": "1.0.0",
+  "version": "1.2.0",
   "description": "Enriches Netflix site with a ratings based on the scores from most popular review websites.",
   "permissions": [
     "https://www.netflix.com/",
@@ -15,6 +15,7 @@
     "https://www.lina.pl/",
     "https://www.rottentomatoes.com/",
     "https://www.filmaffinity.com/",
+	"https://trakt.tv/",
     "storage",
     "tabs"
    ],
@@ -35,7 +36,7 @@
   }],
 
   "background": {
-    "scripts": ["jquery.js", "map_tmdb.js", "map_imdb.js", "map_metacritic.js", "map_filmweb.js", "background.js"],
+    "scripts": ["jquery.js", "map_tmdb.js", "map_imdb.js", "map_metacritic.js", "map_filmweb.js", "map_trakttv.js", "background.js"],
     "persistent": true
   }
 
